<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="monospace"
        android:text="@string/TitleTxt"
        android:textAlignment="center"
        android:textColor="#AA9F9F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Valorant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Valorant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/GameTxt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Minecraft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/Minecraft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/GameTwoTxt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Rainbow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Valorant" />

    <TextView
        android:id="@+id/Rainbow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/GameThreeTxt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/AmongUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Minecraft" />

    <TextView
        android:id="@+id/AmongUs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="78dp"
        android:text="@string/GameFourTxt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rainbow" />

    <TextView
        android:id="@+id/CSGO"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:text="@string/GameFiveTxt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmongUs" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmongUs">

        <Button
            android:id="@+id/button3"
            android:layout_width="162dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:onClick="nextClick"
            android:text="@string/NextTxt"
            android:textColor="#AA9F9F"
            android:textSize="20sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>